--- a/the task 3.html
+++ b/the task 3.html
@@ -8,14 +8,37 @@
     <title>3 задание</title>
 </head>
 <body>
-    <header>Head of site</header>
-    <div class="sidebar">
+    <header>Header</header>
+    <nav>
         <a href="./table layout.html">Табличная вёрстка!</a>
         <a href="./block layout.html">Блочная вёрстка!</a>
-    </div>
-    <div class="content-site"></div>
+    </nav>
+    <article>
+        <h2>Табличная верстка</h2>
+        <p>Табличная верстка создается при помощи вкладывающихся друг в друга таблиц. Практически все браузеры корректно считывают
+        эту разновидность верстки, так как создана она была намного раньше блочной. Если вам необходима конструкция нескольких
+        колонок, то табличная верстка идеально для этого подходит. Нужно сказать и о недостатках верстки с помощью таблиц. При
+        немалом объеме вложенных таблиц образуется слишком громоздкий код, редактировать который сложно. Сайты, созданные с
+        помощью табличной верстки, недостаточно хорошо индексируются поисковыми системами. Поэтому сайты, хорошие по своему
+        содержанию, не всегда занимают первые места в поисковых выдачах.</p>
+        <h2>Блочная верстка</h2>
+        <p>Сайты, выполненные блочной версткой, отличаются использованием более компактного кода, а следовательно и меньшим весом.
+        Блочная верстка очень удобна в использовании, слои или блоки могут друг друга перекрывать. Оптимизаторы пользуются тем,
+        что нижнюю часть HTML-кода можно расположить вверху. Отрицательной стороной блочной верстки выступает некоторая
+        сложность ее использования. Нужно разбираться в CSS 1 и версии 2, а готовится ещё и третья, в которой будет ещё больше
+        функций. Существует определенная сложность в создании сайтов с «резиновой» версткой, но во всемирной сети можно найти
+        достаточно инструкций о том, как легко сделать это блоками. Так как нужно знать немало тонкостей при блочной верстке, то
+        ею пользуются более опытные и знающие верстальщики и web-дизайнеры. Поэтому и услуги в web-студиях, которые выполняют
+        сайты с версткой блоками, стоят дороже, тем более что ещё есть люди, использующие старые версии.</p>
+        <h3>Плюсы блочной верстки</h3>
+        <ol>
+            <li>Значительно меньше HTML-кода и, как следствие, уменьшение веса страницы.</li>
+            <li>Блоки загружаются быстрее таблиц (особенно больших таблиц).</li>
+            <li>В отличии от таблиц, блоки - универсальное средство для создания любого дизайна.</li>
+        </ol>
 
-    <footer></footer>
-    
+
+    </article>
+    <footer>Copiright &copy; Насыров Вячеслав Сергеевич 2020</footer>
 </body>
-</html>
+</html>    
