--- a/square.html
+++ b/square.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./style/square.css">
+    <link rel="stylesheet" href="./style/style(square).css">
     <title>"Наложение элементов"</title>
 </head>
 <body>
