--- a/the task 3.html
+++ b/the task 3.html
@@ -12,6 +12,7 @@
     <nav>
         <a href="./table layout.html">Табличная вёрстка!</a>
         <a href="./block layout.html">Блочная вёрстка!</a>
+        <a href="./square.html"></a>
     </nav>
     <article>
         <h2>Табличная верстка</h2>
