--- a/table layout.html
+++ b/table layout.html
@@ -1,24 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>ТАБЛИЧНАЯ ВЕРСТКА</title>
     <link rel="stylesheet" href="./style/style(table).css">
-    <title>Табличная вёрстка</title>
 </head>
+
 <body>
-       <div class="block1"></div>
-       <div class="block2"></div>
-       <div class="block3"></div>
-       <div class="block4"></div>
-       <div class="block5"></div>
-       <div class="block6"></div>
-       <div class="block7"></div>
-       <div class="block8"></div>
-       <div class="block9"></div>
-       <div class="block10"></div>
+    <table>
+        <tr id="color1">
+            <td colspan="12">
+                <h1></h1>
+            </td>
+        </tr>
+        <tr id="color2">
+            <td colspan="6"></td>
+            <td colspan="6"></td>
+        </tr>
+        <tr id="color3">
+            <td colspan="12"></td>
+        </tr>
+        <tr id="color4">
+            <td colspan="4"></td>
+            <td colspan="4"></td>
+            <td colspan="4"></td>
+        </tr>
+        <tr id="color5">
+            <td colspan="3"></td> 
+            <td colspan="3"></td>
+            <td colspan="3"></td>
+            <td colspan="3"></td>
+        </tr>
 
-
+    </table>
 </body>
+
 </html>
